assets/scss/pages/_standard-page.scss
.standard-page {
    padding-bottom: 89px;
    margin: $nav-desktop-height auto 0;

    @include breakpoint(large down) {
        padding: 26px 0 67px;
        margin-top: $nav-mobile-height;
    }

    .side-nav-content {
        margin-top: 42px;
    }

    .side-content {
        .content-wrapper {
            @include breakpoint(large up) {
                padding-right: 14%;
            }

            .h2 {
                margin-bottom: 28px;
                text-transform: capitalize;
            }

            .big-copy {
                margin-top: 20px;
            }

            a {
                @extend .animated-underline;
            }
        }
    }

    .standard-page-slider {
        margin-top: 50px;

        .standard-page-slide {
            padding: 60px 0;

            @include breakpoint(small only) {
                padding: 28px 29px;
            }

            img {
                width: 62%;

                @include breakpoint(small only) {
                    width: 90%;
                }
            }

            .slide-content {
                width: 38%;
                padding-left: 49px;

                @include breakpoint(small only) {
                    width: 100%;
                    padding-left: 0;
                    margin-top: 29px;
                }
            }
        }

        .glide__track {
            margin-right: -100%;
        }
    }
}

